# lab-env

./: CMakeLists.txt
projects/workingFolder/: CMakeLists.txt
projects/workingFolder/code/: main.cc
